--- a/paper/conclusion.tex
+++ b/paper/conclusion.tex
@@ -17,3 +17,7 @@ linear pi-calculus is good
 we think that a simple formalization is a good basis for further investigations.
 For examples, defined cut elimination, strong normalization, soundness of
 subtyping, for the linear fragment of \Calculus
+
+conclusioni: comparison in \Cref{sec:related} made under the assumption that the
+size of the formalization is a good measure of its complexity. But there are
+several factors that may invalidate this assumption. We should pursue 
