--- a/paper/main.bib
+++ b/paper/main.bib
@@ -264,6 +264,38 @@
   doi          = {10.1007/978-3-031-62697-5\_9},
 }
 
+@article{JacobsBalzerKrebbers22a,
+  author       = {Jules Jacobs and
+                  Stephanie Balzer and
+                  Robbert Krebbers},
+  title        = {Multiparty {GV:} functional multiparty session types with certified
+                  deadlock freedom},
+  journal      = {Proc. {ACM} Program. Lang.},
+  volume       = {6},
+  number       = {{ICFP}},
+  pages        = {466--495},
+  year         = {2022},
+  doi          = {10.1145/3547638},
+}
+
+@inproceedings{TiroreBengstonCarbone25,
+  author       = {Dawit Legesse Tirore and
+                  Jesper Bengtson and
+                  Marco Carbone},
+  editor       = {Jonathan Aldrich and
+                  Alexandra Silva},
+  title        = {Multiparty Asynchronous Session Types: {A} Mechanised Proof of Subject
+                  Reduction},
+  booktitle    = {39th European Conference on Object-Oriented Programming, {ECOOP} 2025,
+                  Bergen, Norway, June 30 - July 2, 2025},
+  series       = {LIPIcs},
+  volume       = {333},
+  pages        = {31:1--31:30},
+  publisher    = {Schloss Dagstuhl - Leibniz-Zentrum f{\"{u}}r Informatik},
+  year         = {2025},
+  doi          = {10.4230/LIPICS.ECOOP.2025.31},
+}
+
 @article{Padovani17,
   author       = {Luca Padovani},
   title        = {A simple library implementation of binary sessions},
