--- a/paper/calculus.tex
+++ b/paper/calculus.tex
@@ -1,4 +1,4 @@
-\section{\Calculus}
+\section{Linear \CP}
 \label{sec:calculus}
 
 The calculus of pure sessions that we formalize is dubbed \Calculus and is a
