--- a/paper/main.tex
+++ b/paper/main.tex
@@ -1,11 +1,6 @@
 \documentclass[pdflatex,sn-mathphys-num]{sn-jnl}
 
-\usepackage{graphicx}
-\usepackage{amsmath,amssymb,amsfonts}
-\usepackage{amsthm}
-\usepackage{xcolor}
-\usepackage{textcomp}
-\usepackage{listings}
+\usepackage{amssymb}
 \usepackage{mathtools}
 \usepackage{stmaryrd}
 \usepackage{mathpartir}
@@ -16,7 +11,7 @@
 \usepackage{newunicodechar}
 \usepackage[utf8]{inputenc}
 \usepackage[T1]{fontenc}
-%%%%
+
 \input{macros}
 
 \newunicodechar{𝟘}{\ensuremath{\Zero}}
@@ -99,10 +94,9 @@
 
 \author*[1]{\fnm{Luca} \sur{Padovani}}\email{luca.padovani2@unibo.it}
 
-\author[2]{\fnm{Claudia} \sur{Raffaelli}}\email{xxx@yyy.zzz}
-\equalcont{These authors contributed equally to this work.}
+\author[2]{\fnm{Claudia} \sur{Raffaelli}}\email{claudia.raffaelli@studenti.unicam.it}
 
-\affil*[1]{\orgdiv{Department of Computer Science and Engineering}, \orgname{Università di Bologna}, \orgaddress{\street{Mura Anteo Zamboni 7}, \city{Bologna}, \postcode{40138}, \state{BO}, \country{Italy}}}
+\affil[1]{\orgdiv{Department of Computer Science and Engineering}, \orgname{Università di Bologna}, \orgaddress{\street{Mura Anteo Zamboni 7}, \city{Bologna}, \postcode{40126}, \state{BO}, \country{Italy}}}
 
 \affil[2]{\orgdiv{Computer Science Division}, \orgname{Università di Camerino}, \orgaddress{\street{via Madonna delle Carceri 7}, \city{Camerino}, \postcode{62032}, \state{MC}, \country{Italy}}}
 
@@ -124,7 +118,7 @@
 % 
 % \textbf{Conclusion:} The abstract serves both as a general introduction to the topic and as a brief, non-technical summary of the main results and their implications. The abstract must not include subheadings (unless expressly permitted in the journal's Instructions to Authors), equations or citations. As a guide the abstract should not exceed 200 words. Most journals do not set a hard limit however authors are advised to check the author instructions for the journal they are submitting to.}
 
-\keywords{keyword1, Keyword2, Keyword3, Keyword4}
+\keywords{session types, linear logic, deadlock freedom, Agda}
 
 %%\pacs[JEL Classification]{D8, H51}
 
