--- a/paper/introduction.tex
+++ b/paper/introduction.tex
@@ -18,7 +18,7 @@ proofs in research work concerning concurrent and distributed programming
 languages.
 
 One of the challenges in the benchmark, henceforth called \emph{linearity
-challenge}, concerns the formalization of a minimal \emph{session calculus}.
+challenge}, concerns the formalization of a \emph{session calculus}.
 %
 Sessions and session types~\citep{Honda93,HondaVasconcelosKubo98,HuttelEtAl16}
 are established formalisms for the static analysis of distributed programs based
@@ -38,38 +38,44 @@ under consideration. One of the alleged culprits of such unwanted complexity is
 \emph{context splitting}, namely the operation that partitions a typing context
 in such a way that the linear resources described therein end up in only one of
 the partitions. This observation has led to the development of various
-techniques for dealing with typing contexts without splitting them, including
-leftover typing~\cite{ZalakainDardha21}, the use of linearity
-predicates~\cite{SanoKavanaghPientka23} and contexts with
-tags~\cite{ZackonEtAl25}.
+alternatives to context splitting including leftover
+typing~\cite{ZalakainDardha21}, the use of linearity
+predicates~\cite{SanoKavanaghPientka23} and tagged contexts~\cite{ZackonEtAl25}.
 
 This paper presents a solution to the linearity challenge.
 %
-The calculus that we formalize, which we call \Calculus, and the one in the
-challenge description differ for two key aspects.
+The calculus that we formalize, dubbed \Calculus, and the one in the challenge
+description differ for two key aspects.
 %
 First of all, the challenge only considers a minimal calculus of first-order
 sessions, whereas \LCP is a fully-featured calculus that includes support for
-higher-order, polymorphic sessions and both linear and shared channels. Also, as
-suggested by its name, \LCP is closely related to \CP~\citep{Wadler14} and its
-type system is based on classical linear logic.
+higher-order, polymorphic, linear and shared channels. Also, \LCP is closely
+related to \CP~\citep{Wadler14} and its type system coincides with the proof
+system of classical linear logic.
 %
 The second difference is that the calculus in the challenge is equipped with
-\emph{native} sessions, whereas \LCP is a \emph{linear} calculus where each
-channel is meant to be used for a \emph{single} communication. Structured
-sessions involving the exchange of several messages can be modeled thanks to the
-use of \emph{explicit continuation channels}. This encoding of (binary) sessions
-using linear channels is well known in the
-literature~\citep{KobayashiPierceTurner99,Kobayashi02b,DardhaGiachinoSangiorgi17}.
+\emph{native} sessions, whereas \LCP features shared channels, which are
+unrestricted, and linear channels, which are meant to be used for a
+\emph{single} communication. Structured sessions involving the exchange of
+several messages can be modeled using \emph{explicit continuations} according to
+the well-known encoding of (binary) sessions into linear
+channels~\citep{KobayashiPierceTurner99,Kobayashi02b,DardhaGiachinoSangiorgi17}.
 %
 Overall, \LCP has the same expressive power of \CP, but is a lower-level
-calculus in which sessions can be encoded instead of being featured natively.
+calculus in which sessions are encodable instead of being featured natively.
 
-The formalization we present is the most complete (in terms of features
-supported by the calculus) and, at the same time, the simplest one (in terms of
-code size). It is also one of only two formalizations that prove the deadlock
-freedom property, and it does so with an order of magnitude less code than the
+Compared to the other analogous formalizations of session/linear
+calculi~\cite{GotoEtAl16,Thiemann19,CicconePadovani20,CastroFerreiraYoshida20,RouvoetPoulsenKrebbersVisser20,ZalakainDardha21,JacobsBalzerKrebbers22,SanoKavanaghPientka23,ZackonEtAl25},
+the one we present here is both the most complete (in terms of features
+supported by the calculus) and the most streamlined (in terms of code size). It
+is also one of only two formalizations that prove the deadlock freedom property
+for a session calculus, and it does so with substantially less code than the
 existing formalization~\cite{JacobsBalzerKrebbers22}.
+
+We acknowledge that \LCP is not 
+
+The differences between \LCP and the calculus are functional to the simplicity
+of its formalization.
 
 the outcome of our investigation are somehow surprising in the sense that the
 premises of the challenge and the assumption that the main technical challenge
