--- a/paper/related.tex
+++ b/paper/related.tex
@@ -387,3 +387,7 @@ those of \citet{JacobsBalzerKrebbers22a} and \citet{TiroreBengstonCarbone25},
 which are notoriously more complex than those of binary session types. Just to
 give an example, the formalization of \citet{TiroreBengstonCarbone25} amounts to
 more than 1Mb of Coq code.
+
+FARE CONFRONTO TRA LCP E IL CALCOLO NELLA CHALLENGE PER DIRE CHE NON SI RIESCONO
+A MODELLARE TUTTI I PROCESSI, MAGARI SI PUÒ FARE UN ESEMPIO NELLA SEZIONE SUL
+CALCOLO.
