--- a/paper/introduction.tex
+++ b/paper/introduction.tex
@@ -42,51 +42,33 @@ alternatives to context splitting including leftover
 typing~\cite{ZalakainDardha21}, the use of linearity
 predicates~\cite{SanoKavanaghPientka23} and tagged contexts~\cite{ZackonEtAl25}.
 
-This paper presents a solution to the linearity challenge.
+This paper proposes a logical and linear solution of the linearity challenge. By
+``logical and linear solution'' we mean that the calculus that we formalize,
+dubbed \Calculus, and the one in the challenge description differ for two key
+aspects.
 %
-The calculus that we formalize, dubbed \Calculus, and the one in the challenge
-description differ for two key aspects.
-%
-First of all, the challenge only considers a minimal calculus of first-order
-sessions, whereas \LCP is a fully-featured calculus that includes support for
+First of all, the challenge considers an \emph{ad hoc}, minimal calculus of
+first-order sessions, whereas \LCP is a fully-featured calculus that supports
 higher-order, polymorphic, linear and shared channels. Also, \LCP is closely
 related to \CP~\citep{Wadler14} and its type system coincides with the proof
 system of classical linear logic.
 %
 The second difference is that the calculus in the challenge is equipped with
-\emph{native} sessions, whereas \LCP features shared channels, which are
-unrestricted, and linear channels, which are meant to be used for a
-\emph{single} communication. Structured sessions involving the exchange of
-several messages can be modeled using \emph{explicit continuations} according to
-the well-known encoding of (binary) sessions into linear
+\emph{native} sessions, whereas \LCP features linear channels that are meant to
+be used for a \emph{single} communication. Structured sessions involving the
+exchange of several messages can be modeled using \emph{explicit continuations}
+according to the well-known encoding of (binary) sessions into linear
 channels~\citep{KobayashiPierceTurner99,Kobayashi02b,DardhaGiachinoSangiorgi17}.
 %
-Overall, \LCP has the same expressive power of \CP, but is a lower-level
-calculus in which sessions are encodable instead of being featured natively.
+Overall, \LCP is a lower-level calculus in which sessions are encodable instead
+of being featured natively, but it has the same expressive power of \CP.
 
-Compared to the other analogous formalizations of session/linear
-calculi~\cite{GotoEtAl16,Thiemann19,CicconePadovani20,CastroFerreiraYoshida20,RouvoetPoulsenKrebbersVisser20,ZalakainDardha21,JacobsBalzerKrebbers22,SanoKavanaghPientka23,ZackonEtAl25},
-the one we present here is both the most complete (in terms of features
-supported by the calculus) and the most streamlined (in terms of code size). It
-is also one of only two formalizations that prove the deadlock freedom property
-for a session calculus, and it does so with substantially less code than the
-existing formalization~\cite{JacobsBalzerKrebbers22}.
-
-We acknowledge that \LCP is not 
-
-The differences between \LCP and the calculus are functional to the simplicity
-of its formalization.
-
-the outcome of our investigation are somehow surprising in the sense that the
-premises of the challenge and the assumption that the main technical challenge
-is the representation of contexts
-
-congetturiamo che la semplicità della formalizzazione derivi dalle
-caratteristiche del calcolo più che dalle tecniche utilizzate, che alla fine
-sono piuttosto standard.
-
-We value these aspects of \Calculus because their combined effect allows us to
-obtain a remarkably simple formalization.
+We value these differences between \LCP and the calculus in the challenge
+description because we think that they contribute to the simplicity of the
+formalization more than the adopted formalization techniques, which end up being
+fairly standard.\Luca{Our work fits the spirit of the challenge identifying not
+only the most appropriate techniques but also the most appropriate models that
+aid the formalization of concurrent/distributed models of computation.}
 %
 The fact of working with a calculus based on linear logic prevents \emph{by
 construction} the same (sequential) process to own both endpoints of a session.
@@ -110,15 +92,35 @@ considering that the type of continuation channels can be conveniently added
 \emph{at the beginning} of a typing context, since such channels are fresh by
 definition.
 
-BISOGNA PARLARE DI RELATED WORK
+% Compared to the other analogous formalizations of session/linear
+% calculi~\cite{GotoEtAl16,Thiemann19,CicconePadovani20,CastroFerreiraYoshida20,RouvoetPoulsenKrebbersVisser20,ZalakainDardha21,JacobsBalzerKrebbers22,SanoKavanaghPientka23,ZackonEtAl25},
+% the one we present here is both the most complete (in terms of features
+% supported by the calculus) and the most streamlined (in terms of code size). It
+% is also one of only two formalizations that prove the deadlock freedom property
+% for a session calculus, and it does so with substantially less code than the
+% existing formalization~\cite{JacobsBalzerKrebbers22}.
 
-The rest of the paper is structured as follows. \Cref{sec:calculus} describes
-the syntax and the operational semantics of \Calculus and states the properties
-of well-typed processes that we formalize and prove. \Cref{sec:agda} outlines
-the essential aspects of the formalization with particular emphasis on the
-representation of channel names and typing contexts. \Cref{sec:conclusion}
-summarizes our contributions, discusses some extensions and future work. The
-formalization has been carried out using Agda and its full code is available
-from a public\Luca{Related work? Confronto con altre formalizzazioni?}
-repository.\footnote{\url{https://github.com/boystrange/LinearityChallenge/tree/main/cp}}
+\subparagraph*{Structure of the paper.}
+%
+\Cref{sec:calculus} describes the syntax and the operational semantics of \LCP
+and states the properties of well-typed processes that we formalize and prove,
+namely typing preservation, deadlock freedom and runtime safety.
+%
+\Cref{sec:agda} presents a roadmap of the Agda formalization and discusses its
+key aspects with particular emphasis on the representation of channel names and
+of typing contexts.
+%
+\Cref{sec:examples} illustrates a few examples of \LCP processes as they are
+represented in Agda and shows how to use Agda as an interpreter for \LCP.
+%
+\Cref{sec:related} discusses related work more in detail by providing a
+qualitative and quantitative comparison between the known formalizations of
+session/linear calculi, including the one for \LCP.
+%
+\Cref{sec:conclusion} summarizes our contributions and discusses some ongoing
+and future work.
+
+The formalization has been carried out using Agda and the source code is
+available on Github at
+\url{https://github.com/boystrange/LinearityChallenge/tree/main/lcp}.
 
