--- a/paper/calculus.tex
+++ b/paper/calculus.tex
@@ -68,8 +68,8 @@ occurrences of $X$ in $A$ with $B$.
                     & | & \Select\x{\InTag_i}\z.P & \text{left/right selection} \\
                     & | & \Join\x\y\z.P           & \text{join} \\
                     & | & \Fork\x\y\z{P}{Q}       & \text{fork} \\
-                    & | & \Forall\x\X\y.P         & \text{for all} \\
-                    & | & \Exists\x{A}\y.P        & \text{exists} \\
+                    & | & \Forall\x\X\z.P         & \text{for all} \\
+                    & | & \Exists\x{A}\z.P        & \text{exists} \\
                     & | & \Server\x\y.P           & \text{server} \\
                     & | & \Client\x\y.P           & \text{client} \\
                     & | & \Weaken\x.P             & \text{weakening} \\
@@ -112,8 +112,8 @@ forks into $P$ and $Q$, each using $y$ and $z$ respectively. The latter process
 continues as $R$. These forms are often used in conjunction with links to model
 \emph{delegation}.
 %
-The processes $\Exists\x{A}\y.P$ and $\Forall\x\X\y.P$ describe the input/output
-of a type on the channel $x$ along with a fresh continuation $y$. These forms
+The processes $\Exists\x{A}\z.P$ and $\Forall\x\X\z.P$ describe the input/output
+of a type on the channel $x$ along with a fresh continuation $z$. These forms
 are useful to describe polymorphic processes.
 
 Next we have process forms dealing with shared (non-linear) channels. The
@@ -168,13 +168,13 @@ identify processes up to renaming of bound names.
             \Cut\x{\Select\y{\InTag_i}\z.P}{Q} & \pcong & \Select\y{\InTag_i}\z.\Cut\x{P}{Q} % & x \ne y,z
             \\
             \SJoin &
-            \Cut\x{\Join\y\u\v.P}{Q} & \pcong & \Join\y\u\v.\Cut\x{P}{Q} % & x \ne y,u,v
+            \Cut\x{\Join\y\u\z.P}{Q} & \pcong & \Join\y\u\z.\Cut\x{P}{Q} % & x \ne y,u,v
             \\
             \SForkL &
-            \Cut\x{\Fork\y\u\v{P}{Q}}{R} & \pcong & \Fork\y\u\v{\Cut\x{P}{R}}{Q} & x \in \fn{P}
+            \Cut\x{\Fork\y\u\z{P}{Q}}{R} & \pcong & \Fork\y\u\z{\Cut\x{P}{R}}{Q} & x \in \fn{P}
             \\
             \SForkR &
-            \Cut\x{\Fork\y\u\v{P}{Q}}{R} & \pcong & \Fork\y\u\v{P}{\Cut\x{Q}{R}} & x \in \fn{Q} %\setminus\set{y,u,v}
+            \Cut\x{\Fork\y\u\z{P}{Q}}{R} & \pcong & \Fork\y\u\z{P}{\Cut\x{Q}{R}} & x \in \fn{Q} %\setminus\set{y,u,v}
             \\
             \SForall &
             \Cut\x{\Forall\y\X\z.P}{Q} & \pcong & \Forall\y\X\z.\Cut\x{P}{Q} % & x \ne y,z
